plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.5'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.graalvm.buildtools.native' version '0.11.5'
}

group = 'santannaf.kafka.demo.skill'
version = '0.0.1-SNAPSHOT'
description = 'demo-kafka-skill'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
    mavenLocal()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'com.tanna.spring:kafka:1.0.0'
    implementation 'org.apache.avro:avro:1.12.1'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs '--enable-native-access=ALL-UNNAMED'
}

tasks.named('bootRun') {
    jvmArgs '--enable-native-access=ALL-UNNAMED'
}
